fixed nav bar visibility

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -79,22 +79,27 @@ body {
 	margin: 5%;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-evenly;
+	flex:;
+	justify-content: safe space-evenly ;
+}
+header {
+	
 }
 .navMain {
 	flex-flow: row;
 	justify-content: space-between;
 	align-items: baseline;
-	margin:5% 1% 2% 1%;
+	margin: 1% 1% 2% 1%;
 }
 .navLink {
 	text-decoration: none;
 	color: gray;
+	
 }
 .titleBox {
 	display: flex;
 	flex-direction: row;
-	justify-content: space-evenly;
+	justify-content: space-around;
 	margin-top:2%;
 	margin-bottom:2%;
 }
@@ -132,20 +137,19 @@ h1 {
 	align-content: space-between;
 }
 .middle-img{
-	width:100%;
+	width: 100%;
+	
 	margin:1%;
 }
 footer {
-	margin:1%;
+	flex-direction: column;
+	
 }
 .inf {
-	display: flex;
-	margin-top: 2%;
-	margin-bottom: 2%;
+	margin: 10px 0px 10px 0px;
+	
 }
 .cr {
 	text-align: center;
-	margin-top: 30px;
-	margin-bottom: 30px;
-
+	margin: 30px 0px 30px 0px;
 }
